--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "react": "15.3.1",
-    "react-native": "^0.32.0"
+    "react-addons-shallow-compare": "^15.3.2",
+    "react-native": "^0.32.0",
+    "react-native-scrollable-tab-view": "^0.6.0",
+    "react-native-tab-view": "0.0.30"
   }
 }
