--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "15.3.1",
     "react-addons-shallow-compare": "^15.3.2",
     "react-native": "^0.32.0",
+    "react-native-button": "^1.7.1",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-tab-view": "0.0.30"
   }
