--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-shallow-compare": "^15.3.2",
     "react-native": "^0.32.0",
     "react-native-button": "^1.7.1",
+    "react-native-fbsdk": "^0.3.0",
     "react-native-scrollable-tab-view": "^0.6.0",
     "react-native-tab-view": "0.0.30"
   }
