--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start"
+    "start": "react-native start",
+    "ios": "react-native run-ios"
   },
   "dependencies": {
     "react": "15.3.1",
@@ -12,6 +13,13 @@
     "react-native-button": "^1.7.1",
     "react-native-fbsdk": "^0.3.0",
     "react-native-scrollable-tab-view": "^0.6.0",
-    "react-native-tab-view": "0.0.30"
+    "react-native-tab-view": "0.0.30",
+    "react-native-tabs": "^1.0.9",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   }
 }
